  and lastModified().
o Added file.info2() for retrieving file information such that symbolic
  file links are also acknowledged on Windows.
o Added Sys.readlink2() for reading symbolic file links also on Windows.
o removeDirectory() can now be used to remove symbolic directory links
  (also on Windows where neither file.remove() nor unlink() work).
  The target directory will never be removed.
o BUG FIX: fileRename() would give an error on directories.
o ROBUSTNESS: createLink() will no longer try to create Windows file
  links on non-Windows platforms.
o ROBUSTNESS: Updated a shell() calls that assume the Windows command
  interpreter to explicitly specify shell=Sys.getenv("COMSPEC").


Version: 1.28.6 [2014-01-06]
o Added argument 'skip' (in addition to existing 'overwrite') to copyFile()
  to allow for better control on how to handle existing destination files.
  For backward compatibilities, it defaults to FALSE, but may be changed
  to skip=!overwrite in a future version.  Furthermore, copyFile() now
  passes (known) arguments '...' to base::file.copy() making it possible
  to copy with or without file permissions etc.  Thanks Taku Tokuyasu (UCSF)
  for reporting on this.


Version: 1.28.5 [2013-12-15]
o Now argument 'asGString' for Arguments$getCharacters() defaults to
  getOption("Arguments$getCharacters/args/asGString", TRUE).  This makes
  it possible to disable this feature, even when it is not possible to
  directly pass that argument.  This will also make it possible to
  set the default to FALSE in the future (instead of TRUE as today).
o Added argument 'inherits' to evaluate() for GString.  Default
  is TRUE for backward compatibility.


Version: 1.28.4 [2013-11-20]
o Minor updates to NAMESPACE file.


Version: 1.28.3 [2013-11-15]
o Added method c() for GenericSummary.


Version: 1.28.2 [2013-11-15]
o CLEANUP: Arguments$getNumerics(NA, range=c(0,1)) no longer gives
  warnings on "no non-missing arguments to min()" etc.


Version: 1.28.1 [2013-10-30]